# backend/validator/card_statement_validator.go
@@ -1,0 +1,27 @@
+package validator
+
+import (
+	"monelog/model"
+
+	validation "github.com/go-ozzo/ozzo-validation/v4"
+)
+
+type ICardStatementValidator interface {
+	ValidateCardStatementRequest(request model.CardStatementRequest) error
+}
+
+type cardStatementValidator struct{}
+
+func NewCardStatementValidator() ICardStatementValidator {
+	return &cardStatementValidator{}
+}
+
+func (csv *cardStatementValidator) ValidateCardStatementRequest(request model.CardStatementRequest) error {
+	return validation.ValidateStruct(&request,
+		validation.Field(
+			&request.CardType,
+			validation.Required.Error("card_type is required"),
+			validation.In("rakuten", "mufg", "epos").Error("card_type must be one of: rakuten, mufg, epos"),
+		),
+	)
+}
